[tool.poetry]
name = "get-papers-list"
version = "0.1.0"
description = "Fetch PubMed papers with non-academic authors"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.28.2"
xmltodict = "^0.13.0"
pandas = "^2.0.0"  # Update pandas to a compatible version
typer = "^0.9.0"

[tool.poetry.scripts]
get-papers-list = "get_papers_list.cli:main"
